--- a/laravel-01-added-nginx/docker-compose.yaml
+++ b/laravel-01-added-nginx/docker-compose.yaml
@@ -3,15 +3,20 @@ services:
   # server, mid tier code/api
   server:
     container_name: "server-cont"
-    image: "nginx:stable-alpine"
+    build:
+      context: .
+      dockerfile: ./docker-files/Dockerfile-nginx
     ports:
       - "8080:80"
-    volumes:
-      # bind mount our custom nginx.conf - inside it we are able to use
-      # service dns names rather than IP's because compose services all get
-      # added to the same auto-generated docker network
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./src:/var/www/html
+    # volumes:
+    #   # bind mount our custom nginx.conf - inside it we are able to use
+    #   # service dns names rather than IP's because compose services all get
+    #   # added to the same auto-generated docker network
+    #   - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    #   - ./src:/var/www/html
+    depends_on:
+      - php
+      - mysql
   # php itself with laravel
   php:
     container_name: "php-cont"
@@ -46,7 +51,21 @@ services:
       dockerfile: Dockerfile-composer-pkg
     volumes:
       - ./src:/var/www/html
-  # npm:
-  #   container_name: "npm-cont"
-  # artisan:
-  #   container_name: "artisan-cont"
+  # utility container for running npm commands - hence
+  # the entrypoint ["npm"] - example docker-compose run --rm npm-cont install
+  # (would run an npm install)    
+  npm:
+    image: node:14
+    working_dir: /var/www/html
+    entrypoint: ["npm"]
+    volumes:
+      - ./src:/var/www/html
+  # utility container for php artisan, sort of like the npm of php, its
+  # a package manager  
+  artisan:
+    build:
+      context: .
+      dockerfile: ./docker-files/Dockerfile-php
+    volumes:
+      - ./src:/var/www/html
+    entrypoint: ["php", "/var/www/html/artisan"]  
